[package]
name = "serde_demo"
version = "0.1.0"
authors = ["Daniel Balsom"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["autocomplete"] }
fluxfox = { path = "../..", default-features=false, features = ["serde", "zip", "mfi"]}
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
bincode = "1.3"

[features]
